--- a/src/fr/sparadrah/ecf/view/swingview/CustomersPanel.form
+++ b/src/fr/sparadrah/ecf/view/swingview/CustomersPanel.form
@@ -5,56 +5,12 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties>
-      <background color="-1745860"/>
+      <background color="-1769250"/>
       <foreground color="-1762260"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="3b900" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints border-constraint="Center"/>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <grid id="27072" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <hspacer id="3c880">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
-              <vspacer id="b202d">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
-              <component id="47bea" class="javax.swing.JButton" binding="addButton">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="ajouter"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <component id="2d5e0" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Gestion des CLients"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="e455c" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="e455c" binding="bottomBar" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="South"/>
         <properties/>
         <border type="none"/>
@@ -66,7 +22,7 @@
               <text value="Modifier"/>
             </properties>
           </component>
-          <component id="ccf31" class="javax.swing.JButton" binding="removeButton">
+          <component id="ccf31" class="javax.swing.JButton" binding="deleteButton">
             <constraints/>
             <properties>
               <enabled value="false"/>
@@ -74,6 +30,36 @@
             </properties>
           </component>
         </children>
+      </grid>
+      <grid id="41af0" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints border-constraint="North"/>
+        <properties/>
+        <border type="line"/>
+        <children>
+          <component id="d0f91" class="javax.swing.JLabel" binding="titleLabel">
+            <constraints/>
+            <properties>
+              <text value="Gestion Clients"/>
+            </properties>
+          </component>
+          <hspacer id="92fe1">
+            <constraints/>
+          </hspacer>
+          <component id="7210e" class="javax.swing.JButton" binding="addButton">
+            <constraints/>
+            <properties>
+              <text value="Ajouter"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="fa0bd" binding="containerList" layout-manager="CardLayout" hgap="0" vgap="0">
+        <constraints border-constraint="Center"/>
+        <properties>
+          <background color="-1716992"/>
+        </properties>
+        <border type="none"/>
+        <children/>
       </grid>
     </children>
   </grid>
