--- a/src/fr/sparadrah/ecf/view/swingview/MainMenu.form
+++ b/src/fr/sparadrah/ecf/view/swingview/MainMenu.form
@@ -1,69 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.MainMenu">
-  <grid id="27dc6" binding="menu" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+  <grid id="27dc6" binding="containerMenu" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="860" height="484"/>
     </constraints>
     <properties/>
     <border type="line">
       <color color="-2104859"/>
     </border>
     <children>
-      <component id="d6fc0" class="javax.swing.JButton" binding="directPurchaseBtn">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Achat direct"/>
-          <toolTipText value=""/>
-        </properties>
-      </component>
-      <vspacer id="64be1">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
+      <grid id="aeb61" binding="menu" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="South"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="aebaf" class="javax.swing.JLabel" binding="purchaseLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Achat"/>
+            </properties>
+          </component>
+          <component id="d6fc0" class="javax.swing.JButton" binding="directPurchaseBtn">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="🛒 Achat Direct"/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="daae9" class="javax.swing.JButton" binding="presciptedPurchaseBtn">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="📋 Achat avec Ordonnance"/>
+            </properties>
+          </component>
+          <component id="22200" class="javax.swing.JSeparator">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="22e5c" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Gestion"/>
+            </properties>
+          </component>
+          <component id="291d5" class="javax.swing.JButton" binding="customerManagerBtn">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="👥 Gestion Clients"/>
+            </properties>
+          </component>
+          <component id="4f1df" class="javax.swing.JButton" binding="doctorsManagerBtn">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="👨‍⚕️ Gestion Médecins"/>
+            </properties>
+          </component>
+          <component id="12fce" class="javax.swing.JButton" binding="medicineManagerBtn">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="💊 Gestion des Stocks"/>
+            </properties>
+          </component>
+          <component id="da326" class="javax.swing.JSeparator">
+            <constraints>
+              <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="5e4dc" class="javax.swing.JButton" binding="exitButton">
+            <constraints>
+              <grid row="9" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="❌ Quitter"/>
+            </properties>
+          </component>
+          <component id="27634" class="javax.swing.JButton" binding="purchaseHistoryBtn">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Historique des achats"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <vspacer id="498a3">
+        <constraints border-constraint="West"/>
       </vspacer>
-      <component id="291d5" class="javax.swing.JButton" binding="customerManagerBtn">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Gestion Clients"/>
-        </properties>
-      </component>
-      <component id="daae9" class="javax.swing.JButton" binding="presciptedPurchaseBtn">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Achat avec ordonnance"/>
-        </properties>
-      </component>
-      <component id="4f1df" class="javax.swing.JButton" binding="doctorsManagerBtn">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Gestion Medecins"/>
-        </properties>
-      </component>
-      <component id="12fce" class="javax.swing.JButton" binding="medicineManagerBtn">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Gestion des Stocks"/>
-        </properties>
-      </component>
-      <component id="5e4dc" class="javax.swing.JButton" binding="exitButton">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Quitter"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
