--- a/src/fr/sparadrah/ecf/view/swingview/PurchaseManagementPanel.form
+++ b/src/fr/sparadrah/ecf/view/swingview/PurchaseManagementPanel.form
@@ -5,7 +5,7 @@
       <xy x="20" y="20" width="1131" height="671"/>
     </constraints>
     <properties>
-      <preferredSize width="900" height="750"/>
+      <preferredSize width="1200" height="750"/>
       <requestFocusEnabled value="true"/>
       <verifyInputWhenFocusTarget value="true"/>
     </properties>
@@ -40,10 +40,10 @@
                   <splitpane position="right"/>
                 </constraints>
                 <properties>
-                  <enabled value="false"/>
+                  <enabled value="true"/>
                   <preferredSize width="400" height="0"/>
                 </properties>
-                <border type="none" title="3. Panier d'Achat"/>
+                <border type="line" title="3. Panier d'Achat"/>
                 <children>
                   <grid id="f185" binding="cartButtonPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
                     <constraints border-constraint="North"/>
@@ -147,10 +147,11 @@
                                   <text value="Rechercher:"/>
                                 </properties>
                               </component>
-                              <component id="af8b6" class="javax.swing.JTextField">
+                              <component id="af8b6" class="javax.swing.JTextField" binding="medicineSearchField">
                                 <constraints/>
                                 <properties>
                                   <minimumSize width="100" height="34"/>
+                                  <preferredSize width="100" height="36"/>
                                 </properties>
                               </component>
                               <component id="89421" class="javax.swing.JButton" binding="searchMedicineBtn">
@@ -189,7 +190,7 @@
                           <minimumSize width="340" height="200"/>
                           <preferredSize width="340" height="200"/>
                         </properties>
-                        <border type="etched" title="1. Sélection du Client"/>
+                        <border type="line" title="1. Sélection du Client"/>
                         <children>
                           <grid id="bb97" binding="customerSearchPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
                             <constraints border-constraint="North"/>
@@ -204,7 +205,10 @@
                               </component>
                               <component id="8c407" class="javax.swing.JTextField" binding="customerSearchField">
                                 <constraints/>
-                                <properties/>
+                                <properties>
+                                  <preferredSize width="100" height="36"/>
+                                  <text value=""/>
+                                </properties>
                               </component>
                               <component id="a1a1e" class="javax.swing.JButton" binding="searchCustomerBtn">
                                 <constraints/>
@@ -252,6 +256,14 @@
         <properties/>
         <border type="none"/>
         <children>
+          <component id="be86c" class="javax.swing.JButton" binding="prescriptionScanBtn">
+            <constraints/>
+            <properties>
+              <enabled value="true"/>
+              <text value="Scanner ordonnance"/>
+              <visible value="false"/>
+            </properties>
+          </component>
           <component id="13667" class="javax.swing.JButton" binding="annulerButton" default-binding="true">
             <constraints/>
             <properties>
