--- a/src/fr/sparadrah/ecf/view/swingview/purchases/PurchaseManagementPanel.form
+++ b/src/fr/sparadrah/ecf/view/swingview/purchases/PurchaseManagementPanel.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.PurchaseManagementPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.purchases.PurchaseManagementPanel">
   <grid id="27dc6" binding="purchasePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1131" height="671"/>
+      <xy x="20" y="20" width="1133" height="671"/>
     </constraints>
     <properties>
       <preferredSize width="1200" height="750"/>
@@ -50,12 +50,33 @@
                     <properties/>
                     <border type="none"/>
                     <children>
+                      <component id="33180" class="javax.swing.JButton" binding="removeUnitItemCartBtn">
+                        <constraints/>
+                        <properties>
+                          <enabled value="false"/>
+                          <icon value="fr/sparadrah/ecf/view/swingview/ressources/moins.png"/>
+                          <text value=""/>
+                          <toolTipText value="Retirer 1 unité a la ligne sélectionné"/>
+                        </properties>
+                      </component>
+                      <component id="73ab4" class="javax.swing.JButton" binding="addItemCartBtn">
+                        <constraints/>
+                        <properties>
+                          <enabled value="false"/>
+                          <icon value="fr/sparadrah/ecf/view/swingview/ressources/plus.png"/>
+                          <text value=""/>
+                          <toolTipText value="Ajouter 1 unité a la ligne"/>
+                        </properties>
+                      </component>
                       <component id="84ec8" class="javax.swing.JButton" binding="removeFromCartBtn">
                         <constraints/>
                         <properties>
-                          <background color="-2354116"/>
+                          <background color="-13947600"/>
+                          <enabled value="false"/>
                           <horizontalAlignment value="0"/>
-                          <text value="Retirer"/>
+                          <icon value="fr/sparadrah/ecf/view/swingview/ressources/delete.png"/>
+                          <text value=""/>
+                          <toolTipText value="Effacer la ligne selectionnée"/>
                         </properties>
                       </component>
                     </children>
@@ -162,7 +183,10 @@
                               </component>
                               <component id="a6b90" class="javax.swing.JSpinner" binding="quantitySpinner">
                                 <constraints/>
-                                <properties/>
+                                <properties>
+                                  <maximumSize width="150" height="34"/>
+                                  <preferredSize width="93" height="34"/>
+                                </properties>
                               </component>
                               <component id="6f3c8" class="javax.swing.JButton" binding="addToCartBtn">
                                 <constraints/>
@@ -219,17 +243,17 @@
                               <hspacer id="b997a">
                                 <constraints/>
                               </hspacer>
+                              <hspacer id="51842">
+                                <constraints/>
+                              </hspacer>
+                              <hspacer id="c14af">
+                                <constraints/>
+                              </hspacer>
                               <component id="c8d22" class="javax.swing.JButton" binding="selectCustomerButton">
                                 <constraints/>
                                 <properties>
                                   <background color="-12156236"/>
                                   <text value="Selectionner le client"/>
-                                </properties>
-                              </component>
-                              <component id="8fd3a" class="javax.swing.JComboBox" binding="prescriptionComboBox">
-                                <constraints/>
-                                <properties>
-                                  <model/>
                                 </properties>
                               </component>
                             </children>
