--- a/src/fr/sparadrah/ecf/view/swingview/customer/CustomerFormPanel.form
+++ b/src/fr/sparadrah/ecf/view/swingview/customer/CustomerFormPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.CustomerFormPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.customer.CustomerFormPanel">
   <grid id="27dc6" binding="editPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="502"/>
